<resources>
    <string name="app_name">newblink</string>
    <string name="double_click_quit">double click quit</string>
    <string name="registration_entrance">One-click registration</string>
    <string name="ChooseGender">Hi! Are you?</string>
    <string name="askBirthday">What\'s your birthday?</string>
    <string name="birthdayInitData">01/12/1995</string>
    <string name="Matching">Matching</string>
    <string name="Hot">Hot</string>
    <string name="Birthday">Birthday</string>
    <string name="save">save</string>
    <string name="login_entrance">Click here for old accounts</string>
    <string name="userLoginStr">User login</string>
    <string name="Account_numberStr">Account number</string>
    <string name="Enter_your_number">Enter your number</string>
    <string name="passwordStr">password</string>
    <string name="Enter_your_password">Enter your password</string>
    <string name="loginStr">login</string>
    <string name="MineStr">Mine</string>
    <string name="MemberStr">Member</string>
    <string name="DiamondsStr">Diamonds</string>
    <string name="VisitorsStr">Visitors</string>
    <string name="giftsStr">Gifts</string>
    <string name="m0">0</string>
    <string name="coupleStr">Couple</string>
    <string name="settingStr">Setting</string>
    <string name="online">online</string>
    <string name="india">india</string>
    <string name="User_informationStr">User information</string>
    <string name="About_Blink">About Blink</string>
    <string name="Rate_usStr">Rate us</string>
    <string name="userId">User ID</string>
    <string name="Change_password">Change password</string>
    <string name="Switch_userStr">Switch user</string>
    <string name="blink">Blink</string>
    <string name="Current_password">Current password</string>
    <string name="New_password">New password</string>
    <string name="Confirm_the_new_password">Confirm the new password</string>
    <string name="Enter_your_current_password">Enter current password</string>
    <string name="Enter_your_new_password">Enter new password</string>
    <string name="Confirm_new_password">Confirm new password</string>
    <string name="submit">Submit</string>
    <string name="Enjoying_Blink">Enjoying Blink</string>
    <string name="tap">tap any star to rate it  on the Google play</string>
    <string name="Ranking_List">Ranking List</string>
    <string name="rule">rule</string>
    <string name="Goddess">Goddess</string>
    <string name="Male_god">Male god</string>
    <string name="show">show</string>
    <string name="vip">VIP</string>
    <string name="m1Month_VIP">1Month VIP</string>
    <string name="m3Month_VIP">3Month VIP</string>
    <string name="m12Month_VIP">12Month VIP</string>
    <string name="Continue">Continue</string>
    <string name="Recent_visitors">Recent visitors</string>
    <string name="guest">Dear Guest ,</string>
    <string name="visitor_describe">"Not long ago,many girls read your  personal information"</string>
    <string name="unlock_vip">Unlock VIP</string>


    <array name="array_month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </array>

    <array name="array_country">
        <item>All</item>
        <item>India</item>
        <item>Malaysia</item>
        <item>Indonesia</item>
        <item>Thailand</item>
        <item>Vietnam</item>
        <item>Philippines</item>
        <item>Pakistan</item>
    </array>


<!--下面是常用语-->
    <string name="please_enter_account">Please Enter Your Account</string>
    <string name="please_enter_password">Please Enter Your Password</string>
    <string name="net_error">Net Error</string>
</resources>