<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/act_bg"
    >

    <ImageView
        android:id="@+id/iv_backUp"
        android:layout_width="18dp"
        android:layout_height="16dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/back_up_img"
        />


    <TextView
        android:id="@+id/tv_changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/Change_password"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/iv_backUp"
        />

    <TextView
        android:id="@+id/tv_Current_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Current_password"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_changePassword"
        android:layout_marginTop="44dp"
        />

    <EditText
        android:id="@+id/et_currentPassword"
        android:layout_width="204dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_Current_password"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_et_bg_current_password_change_password_act"
        android:hint="@string/Enter_your_current_password"
        android:textColorHint="@color/m999999"
        android:textColor="@color/d2_3"
        android:gravity="center"
        android:textSize="15sp"
        />


    <TextView
        android:id="@+id/tv_newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/New_password"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_currentPassword"
        android:layout_marginTop="34dp"
        />

    <EditText
        android:id="@+id/et_newPassword"
        android:layout_width="204dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_newPassword"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_et_bg_current_password_change_password_act"
        android:hint="@string/Enter_your_new_password"
        android:textColorHint="@color/m999999"
        android:inputType="textPassword"
        android:textColor="@color/d2_3"
        android:gravity="center"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/tv_Confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirm_the_new_password"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_newPassword"
        android:layout_marginTop="34dp"
        />

    <EditText
        android:id="@+id/et_Confirm"
        android:layout_width="204dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_Confirm"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_et_bg_current_password_change_password_act"
        android:hint="@string/Confirm_new_password"
        android:textColorHint="@color/m999999"
        android:inputType="textPassword"
        android:textColor="@color/d2_3"
        android:gravity="center"
        android:textSize="15sp"
        />


    <Button
        android:id="@+id/bt_save"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_below="@+id/et_Confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:background="@drawable/shape_bt_registration_entrance"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textAllCaps="false"
        />

</RelativeLayout>