<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/act_bg"
    >

    <TextView
        android:id="@+id/tv_chooseGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ChooseGender"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        />

    <RelativeLayout
        android:id="@+id/rl_headerImg"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_marginHorizontal="65dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/tv_chooseGender"
        >

        <ImageView
            android:id="@+id/iv_maleHeaderImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:minHeight="73dp"
            android:minWidth="73dp"
            android:src="@drawable/checked_header_img_male_registration_act"
            android:layout_centerVertical="true"
            />

        <ImageView
            android:id="@+id/iv_maleChecked"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignTop="@+id/iv_maleHeaderImg"
            android:layout_alignRight="@+id/iv_maleHeaderImg"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="3dp"
            android:src="@drawable/checked_male_registration_act"
            />


        <ImageView
            android:id="@+id/iv_femaleHeaderImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:minHeight="73dp"
            android:minWidth="73dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/unchecked_header_img_female_registration_act"
            android:layout_centerVertical="true"
            />

        <ImageView
            android:id="@+id/iv_femaleChecked"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignTop="@+id/iv_femaleHeaderImg"
            android:layout_alignRight="@+id/iv_femaleHeaderImg"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="3dp"
            android:src="@drawable/checked_female_registration_act"
            android:visibility="gone"
            />


    </RelativeLayout>



    <TextView
        android:id="@+id/tv_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/askBirthday"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rl_headerImg"
        android:layout_marginTop="75dp"
        />


    <RelativeLayout
        android:id="@+id/rl_timeSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_birthday"
        android:layout_marginTop="49dp"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:id="@+id/tv_birthdayData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/birthdayInitData"
            android:textColor="@color/white"
            android:textSize="17sp"
            />

        <View
            android:layout_width="185dp"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_birthdayData"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            />

    </RelativeLayout>


    <Button
        android:id="@+id/bt_matching"
        android:layout_width="185dp"
        android:layout_height="44dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_bt_registration_entrance"
        android:text="@string/Matching"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        />

</RelativeLayout>